improve poc